Fix invisible gutter
Fix by @hossamyehia

--- a/styles/pigments.less
+++ b/styles/pigments.less
@@ -128,7 +128,7 @@ atom-text-editor {
       position: relative;
       .background-color;
       
-      background-attachment: scroll;
+      background-attachment: inherit;
     }
   }
 
